--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+0.3.0
+
+Author: AntoineLatter <aslatter@gmail.com>
+
+*  Update for QuickCheck-2.5.0
+*  Update instances for Ordering and RealFrac based on
+   instances provided in QuickCheck-2.5.0
+*  Allow building against newer containers packages
+
 0.2.0
 
 Author: Antoine Latter <aslatter@gmail.com>
