--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
+0.3.1
+
+Author: Antoine Latter <aslatter@gmail.com>
+
+* Allow building against newer bytestring
+
 0.3.0
 
-Author: AntoineLatter <aslatter@gmail.com>
+Author: Antoine Latter <aslatter@gmail.com>
 
 *  Update for QuickCheck-2.5.0
 *  Update instances for Ordering and RealFrac based on
