--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.3.6
+
+Author: Joao Cristovao <jcristovao@gmail.com>
+
+* Added unordered-containers.
 0.3.5
 
 Author: Antoine Latter <aslatter@gmail.com>
