--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Author: Antoine Latter <aslatter@gmail.com>
+
+* Update list of covered libraries.
+
 0.3.6
 
 Author: Joao Cristovao <jcristovao@gmail.com>
