--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+0.3.8
+
+Author: Antoine Latter <aslatter@gmail.com>
+
+* Allow building against QuickCheck version 2.7
+
 0.3.7
 
 Author: Antoine Latter <aslatter@gmail.com>
