--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+0.3.9
+
+Author: RyanGlScott <ryan.gl.scott@ku.edu>
+
+* Bump text upper version bounds
+
 0.3.8
 
 Author: Antoine Latter <aslatter@gmail.com>
