--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+0.3.13
+
+Author: Oleg Grenrus <oleg.grenrus@iki.fi>
+
+* Add case-insensitive instances
+
 0.3.12
 
 Author: Oleg Grenrus <oleg.grenrus@iki.fi>
