--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+0.3.16.1
+
+* Support QuickCheck-2.11
+* Bump lower bounds on boot-library dependencies to the versions distributed with GHC-7.4.2
+* Bump lower bound on some other dependencies, as cannot test previous lower bound (no install-plans).
+
 0.3.16
 
 * Instances for `Semigroup` newtypes: `Min`, `Max`, `First`, `Last`, `Option` and `WrappedMonoid`.
