--- a/CHANGES
+++ b/CHANGES
@@ -1,9 +1,8 @@
-0.3.27
-
-* Add instances for `text-short`'s `ShortText` type
-
 0.3.26
 
+* Support base-4.16 / GHC-9.2
+* Add instances for `text-short`'s `ShortText` type
+* Add instances for `Solo`
 * Fix bug in `CoArbitrary (Hashed a)` instance
 
 0.3.25.2
